// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip #entityData.url 1`] = `
<div
  className="Tooltip"
  role="tooltip"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <a
    className="Tooltip__link"
    href="http://www.example.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    www.example.com/
  </a>
  <button
    className="Tooltip__button"
    onClick={[MockFunction]}
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    onClick={[MockFunction]}
  >
    Remove
  </button>
</div>
`;

exports[`Tooltip basic 1`] = `
<div
  className="Tooltip"
  role="tooltip"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <button
    className="Tooltip__button"
    onClick={[MockFunction]}
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    onClick={[MockFunction]}
  >
    Remove
  </button>
</div>
`;
